--- a/include/BootstrapPHPCSS.css
+++ b/include/BootstrapPHPCSS.css
@@ -36,6 +36,7 @@ a:visited{
 	border: 1px solid silver;
 	margin-bottom:50px;
 	text-align:center;
+	padding: 0;
 }
 .title{
 	
@@ -46,9 +47,34 @@ a:visited{
 }
 .date{
 	text-align:right;
-	margin-right: 20px;
+	margin: 0 20px 0 0;
+	padding: 5px 0;
+	font-style:italic;
+}
+.spacer{
+	border-top: 2px solid silver;
 }
 .img{
 	width:200px;
 	height:200px;
+	margin-bottom: 20px;
+}
+
+
+/*FORMS*/
+textarea{
+	width: 47%;
+}
+/* Success and Error Message*/
+.errorMsg{
+    color: red;
+    font-weight: bold;
+    font-size: 1.2em;
+    text-align: center;
+}
+.successMsg{
+    color: green;
+    font-weight: bold;
+    font-size: 1.2em;
+    text-align: center;
 }
